[package]
name = "tor-circuit-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipaddress = "0.1.2"
rand = "0.8"
rand_distr = "0.4"
strum = "0.23"
strum_macros = "0.23"
torscaler = {path = "../torscaler"}
ipnet = "2.5.0"
derive_builder = "0.10.2"