[package]
name = "tor-circuit-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipaddress = "0.1.2"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3.1"
regex = "1.5"
lazy_static = "1.4.0"
sha1 = "0.10.1"
twox-hash = "1.6.2"
strum = "0.23"
strum_macros = "0.23"
tordoc = {path = "../tordoc"}
seeded_rand = {path = "../seeded_rand"}
ipnet = "2.5.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.85"
fromsuper = "0.1"